--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aniso8601==8.0.0
 click==7.1.2
-Flask==1.1.2
+Flask==2.3.2
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.3
 itsdangerous==1.1.0
@@ -13,3 +13,4 @@ Werkzeug==1.0.1
 bcrypt==4.0.1
 mysql-connector-python==8.0.33
 flask-cors==3.0.10
+flask-session==0.5.0
